--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.3.9",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
+    "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-safe-area-context": "4.12.0",
